--- a/camerax/example/pubspec.yaml
+++ b/camerax/example/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   video_player: ^2.10.1
   exif: ^3.3.0
   permission_handler: ^12.0.1
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   integration_test:
